# starter-academic-v501

./: .gitignore  CLAUDE.md  README.md  netlify.toml  pyproject.toml
archetypes/: notebook-post.md
data/: page_sharer.toml  tutorial_topics.yaml
layouts/: index.headers
logs/: 2026-02-10-nightlights-theme.md  2026-02-11-gallery-carousel.md  2026-02-11-mobile-iframe-optimization.md  2026-02-11-tutorials-to-posts.md  2026-02-15-compact-view-thumbnails.md  2026-03-10-data-science-post-skill.md  2026-03-11-python-venv-setup.md  2026-03-12-dowhy-post-and-mathjax-fix.md  2026-03-13-doubleml-and-infographic-redesign.md  2026-03-13-dowhy-causal-graph-regen.md  2026-03-13-infographic-ai-prompt-and-dark-mode.md  2026-03-13-partial-identification-post.md  2026-03-14-conditional-compact-view.md  2026-03-14-fwl-post-and-css-cleanup.md  2026-03-14-homepage-optimization.md  2026-03-14-homepage-ux-refinements.md  2026-03-14-image-first-layout-and-notebooks.md  2026-03-14-post-categories-and-scroll-fixes.md  2026-03-19-did-post-enrichment.md  2026-03-20-pyfixest-post.md  2026-03-21-pca-post.md  2026-03-21-pooled-pca-post.md  2026-03-22-esda-post.md  2026-03-22-mgwr-post.md  2026-03-22-scpi-post.md  2026-03-23-bma-lasso-wals-post.md  2026-03-24-skill-improvements.md  2026-03-24-stata-rct-post.md  2026-03-26-r-did-tutorial.md  2026-03-26-stata-honestdid-post.md  2026-03-27-stata-spatial-regression-posts.md  2026-03-28-r-fwlplot-tutorial.md  2026-03-28-r-sdpdmod-tutorial.md  2026-03-28-stata-fwl-tutorial.md  2026-03-28-stata-spxtivdfreg-post.md  2026-03-30-stata-bma-dsl-tutorial.md  (+78 more)
(+2730 files in other folders)
