[project]
name = "starter-academic-v501"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "doubleml>=0.11.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
